se realiza el punto 2
