# index.js
@@ -12,6 +12,7 @@ const swaggerUi=require('swagger-ui-express');
 const swaggerFile=require('./swagger_output.json');
 
 app.use('/api/socio',require('./src/routes/socio.route'));
+app.use('/api/transacciones', require('./src/routes/transaccion.route'))
 app.use('/api/docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 
